@@ -1,0 +1,97 @@
+
+<!doctype html>
+<!--
+Design & programming: Yuzhakov Alexander
+Дизайн и программирование: Южаков Александр
+
+clear0mind @ gmail.com
+-->
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Главная страница | Управление процессом аттестации педагогических работников - Департамент образования и молодежной политики ХМАО-Югры</title>
+    <meta name="description"
+          content="Аттестация педагогических работников государственных и муниципальных образовательных учреждений Югры">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" media="print" href="/static/css/print.css">
+    
+
+</head>
+<body>
+<!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
+chromium.org/developers/how-tos/chrome-frame-getting-started -->
+<!--[if lt IE 7]><p class=chromeframe>Ваш браузер <em>устарел</em> <a href="http://browsehappy.com/">Пожалуйста обновите
+версию</a> или <a href="http://www.google.com/chromeframe/?redirect=true">установите Google Chrome Frame</a> для быстрой
+и безопасной работе в сети Интернет.</p>
+<![endif]-->
+<header>
+    <div id="left-sidebar" class="noprint">
+        <div id="logo">
+            <a href="/">
+                <img src="/static/images/logo.png" alt="Logo" title="Управление процессом аттестации педагогических работников"/>
+            </a>
+        </div>
+        <div id="menu-label">
+            <span>Меню</span>
+        </div>
+        <div id="menu" role="nav">
+            
+<ul>
+    
+        
+            
+                <li><a href="/" title="Главная страница">Главная страница</a></li>
+            
+        
+            
+                <li><a href="/attestation/request/" title="Подать заявление">Подать заявление</a></li>
+            
+        
+            
+                <li><a href="/attestation/request/?q=1" title="Подать представление">Подать представление</a></li>
+            
+        
+            
+        
+            
+        
+            
+        
+            
+        
+        <li><a href="/login/">Вход</a> </li>
+    
+</ul>
+        </div>
+    </div>
+</header>
+<div id="main" role="main">
+    <div id="company">Департамент образования и молодежной политики ХМАО-Югры</div>
+    <div id="app-name">Управление процессом аттестации педагогических работников</div>
+    
+        <h1>Последние новости</h1>
+        <div class="news">
+            <h2>Добро пожаловать!</h2>
+            <div class="date">28 января 2013 г.</div>
+            <p>Департамент образования и молодежной политики Ханты-Мансийского автономного округа - Югры приветствует Вас на странице автоматизированной системы аттестации педагогических кадров округа.</p>
+        </div>
+    
+</div>
+<div class="both"></div>
+<footer>
+    <div id="footer">
+        2013 &copy; Департамент образования и молодежной политики ХМАО-Югры
+    </div>
+</footer>
+
+<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/static/js/libs/jquery.min.js"><\/script>')</script>
+<script type="text/javascript" src="/static/js/libs/jquery-ui-1.8.23.custom.min.js"></script>
+
+<script src="/static/js/app.js"></script>
+</body>
+</html>
